# RUL-aircraft-engine-aiml-project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt  run_api.bat  run_dashboard.bat
.streamlit/: config.toml
app/: api.py  dashboard.py
artifacts/: preprocessor.pkl
configs/: config.yaml
notebooks/: 01_eda_fd001.ipynb  02_baseline_models.ipynb  03_deep_learning_fd001.ipynb
reports/: dl_comparison.csv  model_comparison.csv  phase6_findings.md  sensor_reference.md
saved_models/: bilstm_20260705_013021.pt  bilstm_20260705_013021_config.json  gru_20260705_012811.pt  gru_20260705_012811_config.json  lstm_20260705_012557.pt  lstm_20260705_012557_config.json  xgboost_20260704_234821.pkl
src/rul_prediction/components/: data_ingestion.py  explainer.py  inference_engine.py  model_evaluation.py  model_trainer.py  preprocessor.py  sequence_trainer.py
src/rul_prediction/config/: configuration.py
src/rul_prediction/constants/: constants.py
src/rul_prediction/exception/: exception.py
src/rul_prediction/logger/: logger.py
src/rul_prediction/pipeline/: inference_pipeline.py
