[project]
name = "rul-prediction"
version = "0.1.0"
description = "Remaining Useful Life prediction for turbofan engines using NASA CMAPSS dataset"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numba>=0.60",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "uvicorn>=0.50.0",
    "xgboost>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rul_prediction"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "mypy>=1.10",
    "jupyter>=1.1.1",
    "vulture>=2.16",
]
